# crawl-n-summarize-parliament-schlieren

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
crawler/: constants.py  crawler.py  main.py  utils.py  utils_crawler.py  utils_summarizer.py
frontend/: data.js  index.html  main.js
summarizer/: summarizer.py
