[tool.poetry]
name = "crawl-n-summarize-parliament-schlieren"
version = "0.1.0"
description = ""
authors = ["laiskasiili <marc.folini@gmail.com>"]
readme = "README.md"
packages = [{include = "crawl_n_summarize_parliament_schlieren"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.26.5"
pypdf2 = "^3.0.1"
beautifulsoup4 = "^4.11.2"
selenium = "^4.8.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
